--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
+      - name: Create ENV file
+        run: |
+          touch .env
+          echo REACT_APP_BASENAME = \"/goit-react-hw-08-phonebook\" >> .env
+
       - name: Install, lint, build 🔧
         run: |
           npm install
